fixed menu getting cut off

--- a/css/main.css
+++ b/css/main.css
@@ -335,11 +335,10 @@ button {
         padding: 1.25rem; } }
     .popup__content--nopadding {
       padding: 0; }
-    .popup__content-group {
-      padding: 1.667rem; }
-      @media screen and (min-width: 768px) {
-        .popup__content-group {
-          padding: 1.25rem; } }
+    .popup__content-group p {
+      margin: 18px auto 10px auto; }
+    .popup__content-group button {
+      margin: 15px auto; }
   .popup__text {
     font-family: "Quicksand", "Helvetica", "Arial", sans-serif;
     font-weight: 400;
